--- a/about.html
+++ b/about.html
@@ -30,10 +30,10 @@
         <li><span>ABOUT</span></li>
         <hr class="link-line-about display-none display-line" align="center">
       </a>
-      <a href="contact.html" id="contact">
+      <!-- <a href="contact.html" id="contact">
         <li><span>CONTACT</span></li>
         <hr class="link-line-contact display-none" align="center">
-      </a>
+      </a> -->
       </ul>
     </div>
     </div>
