--- a/index.html
+++ b/index.html
@@ -26,14 +26,14 @@
         <li><span>OUR SERVICES</span></li>
         <hr class="link-line-services display-none" align="center">
       </a>
-      <!-- <a href="about.html" id="about">
+      <a href="about.html" id="about">
         <li><span>ABOUT</span></li>
         <hr class="link-line-about display-none" align="center">
-      </a> -->
-      <a href="contact.html" id="contact">
+      </a>
+      <!-- <a href="contact.html" id="contact">
         <li><span>CONTACT</span></li>
         <hr class="link-line-contact display-none" align="center">
-      </a>
+      </a> -->
       </ul>
     </div>
     </div>
