circle links home page

--- a/index.html
+++ b/index.html
@@ -7,10 +7,13 @@
 		<link rel="stylesheet" href="styles.css">
   </head>
   <body>
-    <div class="nav-container">
-      <div class="logo">
+    <div class="logo-container">
 
+      <div class="logo">
       </div>
+    </div>
+    <div class="nav-container">
+
       <div class="links">
 
       <ul>
@@ -18,22 +21,22 @@
           <li><span>HOME</span></li>
           <hr class="link-line-home display-none display-line" align="center">
         </a>
+        <a href="about.html" id="about">
+          <li><span>ABOUT US</span></li>
+          <hr class="link-line-about display-none" align="center">
+        </a>
+        <a href="services.html" id="services">
+          <li><span>OUR SERVICES</span></li>
+          <hr class="link-line-services display-none" align="center">
+        </a>
         <a href="gallery.html" id="gallery">
         <li><span>GALLERY</span></li>
         <hr class="link-line-gallery display-none" align="center">
       </a>
-      <a href="services.html" id="services">
-        <li><span>OUR SERVICES</span></li>
-        <hr class="link-line-services display-none" align="center">
-      </a>
-      <a href="about.html" id="about">
-        <li><span>ABOUT</span></li>
-        <hr class="link-line-about display-none" align="center">
-      </a>
-      <!-- <a href="contact.html" id="contact">
+      <a href="contact.html" id="contact">
         <li><span>CONTACT</span></li>
         <hr class="link-line-contact display-none" align="center">
-      </a> -->
+      </a>
       </ul>
     </div>
     </div>
@@ -46,41 +49,35 @@
 
 </div>
 <div class="home-content-container">
-<div class="info-block">
-<div class="contact-info">
+<div class="circles_row_1">
+  <div class="circle mani_pedi">
+    <p>MANI PEDI</p>
 
-<h2>Harvest Moon Nail Bar</h2>
-<p>472 Germantown Pike</p>
-<p>Lafayette Hill, PA 19444</p>
-<p>Phone: (610)-234-6904</p>
-<p>Fax: (610)-234-6905</p>
-</div>
-<div class="business-hours">
+  </div>
+  <div class="circle">
+    <p>A-LA-CARTE</p>
 
-<h2>Business Hours</h2>
-<p>Mon: Closed</p>
-<p>Tue-Sat: 10:00am-7:00pm</p>
-<p>Sunday: 10:00am-5:00pm</p>
-<p>harvestmoonnailbar@gmail.com</p>
-<a href="https://www.facebook.com/search/top/?q=harvest%20moon%20nail%20bar"><div class="facebook-icon">
+  </div>
+  <div class="circle">
+    <p>WAXING</p>
 
-</div></a>
+  </div>
+
 </div>
-</div>
-<div class="welcome-block">
-<h1>Welcome</h1>
-<p>Welcome to Harvest Moon Nail Bar , we are professional nails care and design. Visit us for all your nails & skin care treatment needs!
- In our modern life-style, women's nails have become a part of their images and personal statement. We do believe that personal care and fashion will indeed add more spices, color, interest and joy to life of every woman. Certainly so, you ladies are entitled to reward yourself with this kind of enjoyment.</p>
-<p>At Harvest Moon Nail Bar, you could just relax yourself with a glass of complimentary champagne or other beverages of your choice in our inviting, comfortable upscale settings; And our skilled technicians will take care of all your nails and/or facial's needs</p>
-<p>
-Our mission at Harvest Moon Nail Bar is to create a delightful retreat, and deliver incomparable nail care services in a sanitary and hygiene environment.</p>
-<ul>
-  <li>We disposed all disposable tools, and FRESH set of filing set for each customer.</li>
-  <li>We sanitized our pedicure bath with hospital grade disinfection.</li>
-  <li>We wash our cutting tools with hospital grade disinfection and sterilizing after each used.</li>
-  <li>We have separate cutting tools DEDICATED for our beloved regulars (please check in with our manager for the availability).</li>
-  <li>Our salon is completely odorless.</li>
-</ul>
+<div class="circles_row_2">
+  <div class="circle">
+    <p>EYELASH</p>
+
+  </div>
+  <div class="circle">
+    <p>PRODUCT</p>
+
+  </div>
+  <div class="circle">
+    <p>HOT DEALS</p>
+
+  </div>
+
 </div>
 </div>
 <script type="text/javascript" src="scripts.js">
