--- a/index.html
+++ b/index.html
@@ -7,6 +7,15 @@
 		<link rel="stylesheet" href="styles.css">
   </head>
   <body>
+    <div class="appointment">
+      Make an Appointment: 610-234-6904
+    </div>
+    <div class="motto1">
+      Define Beauty
+    </div>
+    <div class="motto2">
+      With Our Brush
+    </div>
     <div class="logo-container">
 
       <div class="logo">
@@ -49,20 +58,16 @@
 
 </div>
 <div class="home-content-container">
-<div class="circles_row_1">
-  <div class="circle mani_pedi">
-    <p>MANI PEDI</p>
-
-  </div>
+  <div class="circles_row_1">
+    <div class="circle mani_pedi">
+      <p>MANI PEDI</p>
+    </div>
   <div class="circle">
     <p>A-LA-CARTE</p>
-
   </div>
   <div class="circle">
     <p>WAXING</p>
-
   </div>
-
 </div>
 <div class="circles_row_2">
   <div class="circle">
@@ -79,6 +84,70 @@
   </div>
 
 </div>
+
+
+</div>
+<div class="hangings">
+
+  <div class="hanging">
+    <div class="nail">
+    </div>
+    <div class="triangle">
+      <div class="inner-plaque">
+      </div>
+      <div class="plaque">
+      </div>
+    </div>
+    <div class="hanging-square">
+      <h3>Hours</h3>
+      <p>Monday: Closed</p>
+      <p>Tue-Sat: 10:00am-7:00pm</p>
+      <p>Sunday: 10:00am-5:00pm</p>
+    </div>
+  </div>
+  <div class="hanging">
+    <div class="nail">
+    </div>
+    <div class="triangle">
+
+      <div class="inner-plaque">
+      </div>
+      <div class="plaque">
+      </div>
+    </div>
+    <div class="hanging-square">
+      <h3>Media</h3>
+      <div class="fbreview">
+
+        <div class="facebook-icon">
+        </div>
+      <div class="yelp-icon">
+
+      </div>
+      </div>
+    </div>
+  </div>
+  <div class="hanging">
+    <div class="nail">
+    </div>
+    <div class="triangle">
+
+      <div class="inner-plaque">
+      </div>
+      <div class="plaque">
+      </div>
+    </div>
+    <div class="hanging-square">
+      <h3>Contact</h3>
+      <p>Phone:</p>
+      <p>610-234-6904</p>
+      <p>Address:</p>
+      <p>472 Germantown Pike, Lafayette Hill, PA 19444</p>
+    </div>
+  </div>
+</div>
+<div class="footer">
+  
 </div>
 <script type="text/javascript" src="scripts.js">
 
