--- a/index.html
+++ b/index.html
@@ -147,7 +147,29 @@
   </div>
 </div>
 <div class="footer">
-  
+  <div class="f-choices">
+    Spa Etiquette
+  </div>
+  <div class="f-choices">
+    Appointment Cancellation
+  </div>
+  <div class="f-choices">
+    Payment & Gratuities
+  </div>
+</div>
+<div class="last-bit">
+  <div class="facebook-icon">
+
+  </div>
+  <div class="email">
+    <a href="#">harvestmoonnailbar@gmail.com</a>
+  </div>
+  <div class="yelp-icon">
+
+  </div>
+</div>
+<div class="copyright">
+  Copyright 2017
 </div>
 <script type="text/javascript" src="scripts.js">
 
