--- a/index.html
+++ b/index.html
@@ -62,23 +62,23 @@
     <div class="circle mani_pedi">
       <p>MANI PEDI</p>
     </div>
-  <div class="circle">
+  <div class="circle alacarte">
     <p>A-LA-CARTE</p>
   </div>
-  <div class="circle">
+  <div class="circle waxing">
     <p>WAXING</p>
   </div>
 </div>
 <div class="circles_row_2">
-  <div class="circle">
+  <div class="circle eyelash">
     <p>EYELASH</p>
 
   </div>
-  <div class="circle">
+  <div class="circle products">
     <p>PRODUCT</p>
 
   </div>
-  <div class="circle">
+  <div class="circle dollar">
     <p>HOT DEALS</p>
 
   </div>
